--- a/requirements.txt
+++ b/requirements.txt
@@ -1,196 +1,13 @@
-add-parent-path==0.1.11
-aiofiles==23.1.0
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==4.2.2
-anyio==3.6.2
-argcomplete==1.10.3
-asgiref==3.7.2
-async-generator==1.10
-async-timeout==4.0.2
-attrs==23.1.0
-beautifulsoup4==4.8.2
-blinker==1.6.2
-blis==0.7.9
-bs4==0.0.1
-cachetools==5.3.0
-catalogue==2.0.8
-certifi==2022.12.7
-cffi==1.15.1
-chardet==3.0.4
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-compressed-rtf==1.0.6
-confection==0.0.4
-contourpy==1.0.7
-cryptography==41.0.1
-cycler==0.11.0
-cymem==2.0.7
-decorator==5.1.1
+Python == 3.11.3
 Django==4.2.1
-docopt==0.6.2
-docx==0.2.4
-docx2txt==0.8
-ebcdic==1.1.1
-en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.5.0/en_core_web_sm-3.5.0-py3-none-any.whl
-entrypoints==0.4
-et-xmlfile==1.1.0
-exceptiongroup==1.1.1
-extract-msg==0.28.7
-fastapi==0.95.1
-ffmpy==0.3.0
-filelock==3.12.0
-Flask==2.3.2
-flatbuffers==23.3.3
-fonttools==4.39.3
-frozenlist==1.3.3
-fsspec==2023.4.0
-fuzzywuzzy==0.18.0
-gitdb==4.0.10
-GitPython==3.1.31
-gradio==3.32.0
-gradio_client==0.2.5
-h11==0.14.0
-html5lib==1.1
-httpcore==0.17.0
-httpx==0.24.0
-huggingface-hub==0.13.4
-idna==3.4
-IMAPClient==2.1.0
-importlib-metadata==6.6.0
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.17.3
-kanilog==0.3.3
-kiwisolver==1.4.4
-langcodes==3.3.0
-libclang==16.0.0
-linkify-it-py==2.0.0
-lml==0.1.0
-logzero==1.7.0
-lxml==4.9.2
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-matplotlib==3.7.1
-mdit-py-plugins==0.3.3
-mdurl==0.1.2
-mpmath==1.3.0
-multidict==6.0.4
-murmurhash==1.0.9
-mysql-connector-python==8.0.33
-mysqlclient==2.1.1
-networkx==3.1
-nltk==3.5
-numpy==1.23.5
-oauthlib==3.2.2
-olefile==0.46
-openai==0.27.4
-openpyxl==3.1.2
-orjson==3.8.10
-outcome==1.2.0
-packaging==23.1
-pandas==2.0.0
-pathy==0.10.1
-pdfminer.six==20221105
-pdfplumber==0.9.0
-phonenumbers==8.13.13
-Pillow==9.5.0
-pipreqs==0.4.13
-pluggy==1.0.0
-preshed==3.0.8
-protobuf==3.20.3
-pyarrow==12.0.0
-pyasn1==0.5.0
-pycparser==2.21
-pycryptodome==3.17
-pydantic==1.10.7
-pydeck==0.8.1b0
-pydub==0.25.1
-pyexcel==0.7.0
-pyexcel-io==0.6.6
-Pygments==2.15.1
-Pympler==1.0.1
-pyparsing==3.0.9
-pyrsistent==0.19.3
-PySocks==1.7.1
-pytest==7.3.1
-python-dateutil==2.8.2
-python-docx==0.8.11
-python-dotenv==1.0.0
-python-multipart==0.0.6
-python-pptx==0.6.21
-pytz==2023.3
-pytz-deprecation-shim==0.1.0.post0
-PyYAML==6.0
-regex==2023.3.23
 requests==2.31.0
-resume-parser==0.8.4
-rich==13.3.5
-scikit-learn==1.2.2
-scipy==1.10.1
-selenium==4.9.1
-semantic-version==2.10.0
+bs4==0.0.1
+beautifulsoup4==4.8.2
+nltk==3.5
+openai==0.27.4
+docx==0.2.4
+regex==2023.3.23
+asgiref==3.7.2
 six==1.12.0
-smart-open==6.3.0
-smmap==5.0.0
-sniffio==1.3.0
-sortedcontainers==2.4.0
-soupsieve==2.4.1
-spacy==3.5.2
-spacy-legacy==3.0.12
-spacy-loggers==1.0.4
-SpeechRecognition==3.8.1
 sqlparse==0.4.4
-srsly==2.4.6
-starlette==0.26.1
-stdlogging==0.16
-stemming==1.0.1
-streamlit==1.22.0
-streamlit-lottie==0.0.3
-streamlit-state==0.1.0
-sympy==1.11.1
-tenacity==8.2.2
-tensorboard-data-server==0.7.0
-tensorboard-plugin-wit==1.8.1
-tensorflow-estimator==2.12.0
-tensorflow-io-gcs-filesystem==0.31.0
-termcolor==2.3.0
-textract==1.6.5
-texttable==1.6.7
-thinc==8.1.9
-threadpoolctl==3.1.0
-tika==2.6.0
-tokenizers==0.13.3
-toml==0.10.2
-toolz==0.12.0
-torch==2.0.0
-tornado==6.3.2
-tqdm==4.65.0
-transformers==4.28.1
-trio==0.22.0
-trio-websocket==0.10.2
-typer==0.7.0
-typing_extensions==4.5.0
 tzdata==2023.3
-tzlocal==4.3
-uc-micro-py==1.0.1
-urllib3==1.26.15
-uvicorn==0.21.1
-validators==0.20.0
-Wand==0.6.11
-wasabi==1.1.1
-watchdog==3.0.0
-webdriver-manager==3.8.6
-webencodings==0.5.1
-websockets==11.0.2
-Werkzeug==2.3.4
-wrapt==1.14.1
-wsproto==1.2.0
-xlrd==1.2.0
-XlsxWriter==3.1.0
-yarg==0.1.9
-yarl==1.8.2
-zipp==3.15.0
